gcc/testsuite/rust/rustc/ui/const-generics/invalid-constant-in-args.rs
use std::cell::Cell;

fn main() {
    let _: Cell<&str, "a"> = Cell::new("");
// { dg-error ".E0107." "" { target *-*-* } .-1 }
}

